--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js ",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +22,6 @@
     "mongoose": "^6.0.14"
   },
   "devDependencies": {
-    "eslint": "^8.3.0",
-    "eslint-plugin-react": "^7.27.1",
     "nodemon": "^2.0.15"
   }
 }
