--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amazona",
+  "name": "react-shopy",
   "type": "module",
   "version": "1.0.0",
   "description": "",
@@ -21,7 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+  "engines": {
+    "node": "14.17.6"
   }
 }
