--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET=mysecret
-MONGODB_URL=mongodb+srv://gopinath:admin123@cluster0.d6drg.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://gopinath:admin123@mern-shopy.a9xff.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT=5000
+NODE_ENV=development
