pay button added

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ JWT_SECRET=mysecret
 MONGODB_URL=mongodb+srv://gopinath:admin123@mern-shopy.a9xff.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=5000
 NODE_ENV=development
+PAYPAL_CLIENT_ID=AWvB6RKwcq6bjIWxbMV_hvQIHZjnKDQPyVLce1eDBj106MdzeECea4iWnT0wglVve_XMxq26cnQqAZIO
+
